06-kubernetes-apps/nginx-server-webapp/01-Nginx-App1-Deployment-and-NodePortService.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-webapp-deployment
  labels:
    app: nginx-webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-webapp
  template:
    metadata:
      labels:
        app: nginx-webapp
    spec:
      containers:
        - name: nginx-webapp
          image: nginx:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-webapp-nodeport-service
  labels:
    app: nginx-webapp
  annotations:
#Important Note:  Need to add health check path annotations in service level if we are planning to use multiple targets in a load balancer    
    alb.ingress.kubernetes.io/healthcheck-path: /nginx/index.html
spec:
  type: NodePort
  selector:
    app: nginx-webapp
  ports:
    - port: 80
      targetPort: 80
