06-kubernetes-apps/nginx-server-webapp/02-App1-Ingress.yml
# Annotations Reference: https://kubernetes-sigs.github.io/aws-load-balancer-controller/latest/guide/ingress/annotations/
#apiVersion: extensions/v1beta1
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-webapp-ingress
  annotations:
    # Load Balancer Name
    alb.ingress.kubernetes.io/load-balancer-name: webapp-loadbalancer
    # Ingress Core Settings  
    #kubernetes.io/ingress.class: "alb" (OLD INGRESS CLASS NOTATION - STILL WORKS BUT RECOMMENDED TO USE IngressClass Resource)
    alb.ingress.kubernetes.io/scheme: internet-facing    
    # Health Check Settings
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP 
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    #Important Note:  Need to add health check path annotations in service level if we are planning to use multiple targets in a load balancer    
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
    alb.ingress.kubernetes.io/success-codes: '200'
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'
    ## SSL Settings
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}]'
    #alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:180789647333:certificate/0d86500a-08b3-4f17-8fb4-f09532ba0522
    #alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-TLS-1-1-2017-01 #Optional (Picks default if not used)    
    # SSL Redirect Setting
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    # External DNS - For creating a Record Set in Route53
    external-dns.alpha.kubernetes.io/hostname: webapp.k8.shivamanand.com 
    # Ingress Groups
    alb.ingress.kubernetes.io/group.name: myapps.web
    alb.ingress.kubernetes.io/group.order: '10'
    # alb.ingress.kubernetes.io/actions.nginx-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "Path":"/nginx", "Query": "#{query}", "StatusCode": "HTTP_301"}}'
    # alb.ingress.kubernetes.io/actions.nginx-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTP", "Port": "80", "Path": "/nginx", "Query": "#{query}", "StatusCode": "HTTP_301"}}'
    # alb.ingress.kubernetes.io/rewrite-target: /nginx
    alb.ingress.kubernetes.io/actions.redirect-to-app: >
        {"type":"redirect","redirectConfig":{ "host": "#{host}","port": "#{port}","protocol": "#{protocol}","query": "#{query}","path":"/","statusCode":"HTTP_302"}} 

spec:
  ingressClassName: my-aws-ingress-class   # Ingress Class
  # SSL Certificate Discovery using TLS        
  tls:
  - hosts:
    - "*.k8.shivamanand.com"  
  rules:  
    - http:
        paths:
          - path: /nginx
            # pathType: Prefix
            pathType: ImplementationSpecific
            backend:
              service:
                name: nginx-webapp-nodeport-service
                # servicePort: use-annotation
                port: 
                  number: 80
          - path: /
            pathType: Exact
            backend:
              service:
                name: redirect-to-main-app
                port: 
                  name: use-annotation
            # backend:
            #   serviceName: nginx-webapp-nodeport-service
            #   servicePort: 80
            #   rewrite-target: /index.html
            #   redirect:
            #     url: /
            #     statusCode: 301
